--- a/Pages/conocenos.html
+++ b/Pages/conocenos.html
@@ -81,7 +81,8 @@
                     Esto puede durar mas de cinco años hasta que se resuelva….
                     Todavía espera…. Pero, afortunadamente a raíz de este hecho, nuestra familia comenzó a capacitarse
                     para lograr un emprendimiento inmobiliario para que a nadie le vuelva a suceder lo acontecido a
-                    nuestra familia.
+                    nuestra familia.</p>
+                <p class="cuadrado1 formato-p">
                     La inmobiliaria MARTINEZ PRIETO, no solo ofrece comprar, vender, alquilar, realizar tasaciones,
                     etc., sino lo mas importante ACOMPAÑARTE en ese sueño y ese cambio tan importante en tu vida.
                     Quizás hayas decidido irte de la casa de tus padres a vivir solo o te cases y porque no se agranda
@@ -97,9 +98,9 @@
                     permitiremos que se repita la historia.
                 </p>
                 <div class="cuadrado3">
-                    <h2>
+                    <span>
                         Compradores contentos 
-                    </h2>
+                    </span>
                     <img src="../Images/sonrisa.jpg" alt="sonrisa">
                 </div>
             </div>
