--- a/Pages/propiedad.html
+++ b/Pages/propiedad.html
@@ -52,7 +52,7 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="background-propiedades">
         <!--seccion carrusel  -->
         <h1 class="titulo-h1 animate_animated animate__bounceIn">
             Se vende o alquila casa en Monte Hermoso
@@ -85,71 +85,72 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
             </button>
+            <div class="galeria-propiedad">
+                <div class="gallery-propiedad">
+                    <div class="descripcion">
+                        <h3 class="titulo-h2 color-propiedad">
+                            Descripción
+                        </h3>
+                        <ul>
+                            <li>562 M² Totales</li>
+                            <li>85M² Cubiertos</li>
+                            <li>562M² Terreno</li>
+                            <li>5 Ambientes</li>
+                            <li>1 Baño</li>
+                            <li>1 Cochera</li>
+                            <li>2 Dormitorios</li>
+                            <li>2 Años de antiguedad</li>
+                            <li>Valor de venta 77000 usd</li>
+                            <li>Valor de alquiler 500 usd</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="gallery-propiedad">
+                    <h3 class="titulo-h2 color-propiedad">
+                        Ubicación
+                    </h3>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6363.542670956438!2d-61.281713488907684!3d-38.98494585637579!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x958d5290cbca6087%3A0x6250958d52aefc8a!2sMonte%20Hermoso%2C%20Provincia%20de%20Buenos%20Aires!5e1!3m2!1ses!2sar!4v1642424447830!5m2!1ses!2sar"
+                        width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div>
+                <div class="gallery-propiedad">
+                    <h3 class="titulo-h2 color-propiedad">
+                        Consultanos
+                    </h3>
+                    <form>
+                        <div class="form-group w-100">
+                            <label for="validation01">Nombre*</label>
+                            <input type="text" class="form-control is-valid" id="validation01" placeholder="Nombre"
+                                required>
+                        </div>
+                        <div class="form-group w-100">
+                            <label for="validation01">Apellido*</label>
+                            <input type="text" class="form-control is-valid" id="validation01" placeholder="Apellido"
+                                required>
+                        </div>
+                        <div class="form-group w-100">
+                            <label for="validation01">Email*</label>
+                            <input type="text" class="form-control is-valid" id="validation01" placeholder="Email" required>
+                        </div>
+                        <div class="form-group w-100">
+                            <label for="validation01">Numero de telefono*</label>
+                            <input type="text" class="form-control is-valid" id="validation01"
+                                placeholder="Numero de telefono" required>
+                        </div>
+                        <div class="form-group w-100">
+                            <label for="exampleFormControlTextarea1">Mensaje</label>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        </div>
+                        <div class="col-12 d-flex justify-content-center">
+                            <button class="btn btn-primary mt-3 " type="submit">Enviar</button>
+                        </div>
+                    </form>
+                </div>
         </section>
         <!-- section- gallery-prop -->
-        <section>
+        <section class="background-propiedades">
         </div>
-        <div class="galeria-propiedad">
-            <div class="gallery-propiedad">
-                <div class="descripcion">
-                    <h3 class="titulo-h2">
-                        Descripción
-                    </h3>
-                    <ul>
-                        <li>562 M² Totales</li>
-                        <li>85M² Cubiertos</li>
-                        <li>562M² Terreno</li>
-                        <li>5 Ambientes</li>
-                        <li>1 Baño</li>
-                        <li>1 Cochera</li>
-                        <li>2 Dormitorios</li>
-                        <li>2 Años de antiguedad</li>
-                        <li>Valor de venta 77000 usd</li>
-                        <li>Valor de alquiler 500 usd</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="gallery-propiedad">
-                <h3 class="titulo-h2">
-                    Ubicación
-                </h3>
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6363.542670956438!2d-61.281713488907684!3d-38.98494585637579!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x958d5290cbca6087%3A0x6250958d52aefc8a!2sMonte%20Hermoso%2C%20Provincia%20de%20Buenos%20Aires!5e1!3m2!1ses!2sar!4v1642424447830!5m2!1ses!2sar"
-                    width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            </div>
-            <div class="gallery-propiedad">
-                <h3 class="titulo-h2">
-                    Consultanos
-                </h3>
-                <form>
-                    <div class="form-group w-100">
-                        <label for="validation01">Nombre*</label>
-                        <input type="text" class="form-control is-valid" id="validation01" placeholder="Nombre"
-                            required>
-                    </div>
-                    <div class="form-group w-100">
-                        <label for="validation01">Apellido*</label>
-                        <input type="text" class="form-control is-valid" id="validation01" placeholder="Apellido"
-                            required>
-                    </div>
-                    <div class="form-group w-100">
-                        <label for="validation01">Email*</label>
-                        <input type="text" class="form-control is-valid" id="validation01" placeholder="Email" required>
-                    </div>
-                    <div class="form-group w-100">
-                        <label for="validation01">Numero de telefono*</label>
-                        <input type="text" class="form-control is-valid" id="validation01"
-                            placeholder="Numero de telefono" required>
-                    </div>
-                    <div class="form-group w-100">
-                        <label for="exampleFormControlTextarea1">Mensaje</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                    </div>
-                    <div class="col-12 d-flex justify-content-center">
-                        <button class="btn btn-primary mt-3 " type="submit">Enviar</button>
-                    </div>
-                </form>
-            </div>
+        
         </section>
 
     </main>
