--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
     </header>
     <main>
         <!-- section home -->
-        <section>
+        <section class="section-home">
             <h1 class="titulo-h1 animate_animated animate__bounceIn">
                 Inmobiliaria Martinez-Prieto... Mucho más que una mudanza
             </h1>
-            <div class="parrafo-flex">
+            <!-- <div class="parrafo-flex">
                 <p class="parrafo-index">
                     Este emprendimiento inmobiliario, surgió paradójicamente, tras una estafa que le hicieron a un
                     familiar. ¿Y por qué nos dedicamos de lleno en la industria inmobiliaria? Tras este hecho nos
@@ -66,11 +66,11 @@
                     brindarles la mejor atención y seguridad para lograr que nuestros clientes se vayan siempre felices
                     de este sitio.
                 </p>
-            </div>
+            </div> -->
             <!-- cartas -->
             <div class="cartas">
                 <div class="card">
-                    <img src="./Images/imgindex/alquilar.jpg" class="card-img-top" alt="imagen alquilar">
+                    <img src="./Images/imgindex/alquilar.jpg" class="" alt="imagen alquilar">
                     <div class="card-body">
                         <h5 class="card-title">Comprar</h5>
                         <p class="card-text">Acá podes encontrar todo lo referido a la compra de propiedades</p>
@@ -78,7 +78,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="./Images/imgindex/comprar.jpg" class="card-img-top" alt="imagen comprar">
+                    <img src="./Images/imgindex/comprar.jpg" class="" alt="imagen comprar">
                     <div class="card-body">
                         <h5 class="card-title">Vender</h5>
                         <p class="card-text">Acá podes encontrar el formulario de venta</p>
@@ -86,7 +86,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="./Images/imgindex/ventas.jpg" class="card-img-top" alt="imagen ventas">
+                    <img src="./Images/imgindex/ventas.jpg" class="" alt="imagen ventas">
                     <div class="card-body">
                         <h5 class="card-title">Alquilar</h5>
                         <p class="card-text">Acá encontraras todo lo referido al alquiler de propiedades</p>
