--- a/Pages/conocenos.html
+++ b/Pages/conocenos.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <!-- meta-viewport -->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- SEO -->
-        <meta name="description"
-            content="comprar vender o  alquilar cualquier propiedad esta al alcance en inmobiliaria martinez">
-        <meta name="keywords" content="alquilar, vender, inmobiliaria, ph, edificio, comprar, tasaciones, campo, casa">
-        <title>inmobiliaria martinez🏠</title>
-        <!-- icons -->
-        <link rel="shortcut icon" href="../Images/icon/favicon.ico">
-        <link rel="shortcut icon" href="../Images/icon/favicon.ico">
-        <!-- link css -->
-        <link rel="stylesheet" href="../css/estilos.css">
-        <!-- fonts -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Poppins:wght@200&display=swap"
-            rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Oswald:wght@500&display=swap"
-            rel="stylesheet">
-        <!-- animate-animated -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-        <!-- bootstrap -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- meta-viewport -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO -->
+    <meta name="description"
+        content="comprar vender o  alquilar cualquier propiedad esta al alcance en inmobiliaria martinez">
+    <meta name="keywords" content="alquilar, vender, inmobiliaria, ph, edificio, comprar, tasaciones, campo, casa">
+    <title>inmobiliaria martinez🏠</title>
+    <!-- icons -->
+    <link rel="shortcut icon" href="../Images/icon/favicon.ico">
+    <link rel="shortcut icon" href="../Images/icon/favicon.ico">
+    <!-- link css -->
+    <link rel="stylesheet" href="../css/estilos.css">
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Poppins:wght@200&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Oswald:wght@500&display=swap"
+        rel="stylesheet">
+    <!-- animate-animated -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+</head>
 
 <body>
     <!-- barra de navegación -->
@@ -41,14 +41,14 @@
         <input type="checkbox" id="btn-menu">
         <label for="btn-menu"><img src="../Images/imgindex/menu2.png" alt="menú hamburguesa"></label>
         <nav class="menu">
-                        <ul>
-                            <li><a href="../index.html">Inicio</a></li>
-                            <li><a href="#">Conocenos</a></li>
-                            <li><a href="comprar.html">Comprar</a></li>
-                            <li><a href="alquileres.html">Alquilar</a></li>
-                            <li><a href="vender.html">Vender</a></li>
-                            <li><a href="contacto.html">Contacto</a></li>
-                        </ul>
+            <ul>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="#">Conocenos</a></li>
+                <li><a href="comprar.html">Comprar</a></li>
+                <li><a href="alquileres.html">Alquilar</a></li>
+                <li><a href="vender.html">Vender</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
         </nav>
     </header>
     <main>
@@ -99,9 +99,13 @@
                 </p>
                 <div class="cuadrado3">
                     <span>
-                        Compradores contentos 
+                        Compradores contentos
                     </span>
-                    <img src="../Images/sonrisa.jpg" alt="sonrisa">
+                    <div class="caja-imagenes">
+                        <img src="../Images/sonrisa.jpg" alt="sonrisa">
+                        <img src="../Images/familia casa.jpg" alt="familia casa">
+                        <img src="../Images/familia contenta.jpg" alt="familia contenta">
+                    </div>
                 </div>
             </div>
         </section>
@@ -115,7 +119,8 @@
                     <img src="../Images/imgindex/Inmobiliaria Martinez-prieto.png" alt="Logo">
                 </div>
                 <div class="terminos">
-                    <p>Inmobiliaria Martinez-Prieto ejerce el corretaje inmobiliario. Cada oficina es de propiedad y gestión
+                    <p>Inmobiliaria Martinez-Prieto ejerce el corretaje inmobiliario. Cada oficina es de propiedad y
+                        gestión
                         independiente. En cumplimiento de las leyes vigentes que regulan el corretaje inmobiliario, Ley
                         Nacional 25.028, Ley 22.802 de Lealtad Comercial, Ley 24.240 de Defensa al Consumidor, las
                         normas del Código Civil y Comercial de la Nación y Constitucionales, los agentes/gestores NO
